Removendo a pasta lib

--- a/index.html
+++ b/index.html
@@ -139,36 +139,36 @@
 
         <div class="gallery_image_row">
           <div class="gallery_image_column">
-            <img src="../assets/image/01.jpeg" />
-            <img src="../assets/image/02.jpeg" />
+            <img src="assets/image/01.jpeg" />
+            <img src="assets/image/02.jpeg" />
           </div>
           <div class="gallery_image_column">
-            <img src="../assets/image/03.jpeg" />
-            <img src="../assets/image/04.jpeg" />
+            <img src="assets/image/03.jpeg" />
+            <img src="assets/image/04.jpeg" />
           </div>
           <div class="gallery_image_column">
-            <img src="../assets/image/05.jpeg" />
-            <img src="../assets/image/06.jpeg" />
+            <img src="assets/image/05.jpeg" />
+            <img src="assets/image/06.jpeg" />
           </div>
           <div class="gallery_image_column">
-            <img src="../assets/image/07.jpeg" />
-            <img src="../assets/image/08.jpeg" />
+            <img src="assets/image/07.jpeg" />
+            <img src="assets/image/08.jpeg" />
           </div>
           <div class="gallery_image_column">
-            <img src="../assets/image/09.jpeg" />
-            <img src="../assets/image/10.jpeg" />
+            <img src="assets/image/09.jpeg" />
+            <img src="assets/image/10.jpeg" />
           </div>
           <div class="gallery_image_column">
-            <img src="../assets/image/11.jpeg" />
-            <img src="../assets/image/12.jpeg" />
+            <img src="assets/image/11.jpeg" />
+            <img src="assets/image/12.jpeg" />
           </div>
           <div class="gallery_image_column">
-            <img src="../assets/image/13.jpeg" />
-            <img src="../assets/image/14.jpeg" />
+            <img src="assets/image/13.jpeg" />
+            <img src="assets/image/14.jpeg" />
           </div>
           <div class="gallery_image_column">
-            <img src="../assets/image/15.jpeg" />
-            <img src="../assets/image/16.jpeg" />
+            <img src="assets/image/15.jpeg" />
+            <img src="assets/image/16.jpeg" />
           </div>
         </div>
       </div>
